selfhost/test/typechecker/enumdecl/error_variant_field_initializer_type_mismatch.out
Error at %FILE_NAME%:2:16
Type mismatch
  |    Bar(a: Int = "abc")
                    ^
Expected: Int
but instead found: String
