selfhost/test/typechecker/enumdecl/error_variant_field_initializer_type_mismatch.abra
enum Foo {
  Bar(a: Int = "abc")
}